--- a/website-n-ar.html
+++ b/website-n-ar.html
@@ -47,31 +47,56 @@
                 <div class="row align-items-end justify-content-between">
                     <div class="col-md-6">
                         <h2> Website & AR</h2>
-                        <p>Your website is more than just a digital storefront. It's your brand's online home, where every click, scroll, and interaction matters. With our website solutions, we don't just build websites; we create immersive digital experiences that captivate your audience from the moment they land on your page. From sleek designs to seamless navigation, we ensure that every element reflects your brand's story and ethos. Because in today's digital age, your website is your brand's first impression – and we make sure it's unforgettable.</p>
+                        <p>Your website is more than just a digital storefront. It's your brand's online home, where
+                            every click, scroll, and interaction matters. With our website solutions, we don't just
+                            build websites; we create immersive digital experiences that captivate your audience from
+                            the moment they land on your page. From sleek designs to seamless navigation, we ensure that
+                            every element reflects your brand's story and ethos. Because in today's digital age, your
+                            website is your brand's first impression – and we make sure it's unforgettable.</p>
                     </div>
                     <div class="col-md-5">
                         <div class="ssh-box">
                             <div class="ssh-slider">
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/3.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/4.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/5.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/6.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/1.png" alt="">
+                                </div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/website-n-ar/2.png" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -99,7 +124,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>eCommerce Experience Development</h6>
-                                    <p>Start your online retail presence with tailored solutions that prioritize user experience, driving sales and customer satisfaction.</p>
+                                    <p>Start your online retail presence with tailored solutions that prioritize user
+                                        experience, driving sales and customer satisfaction.</p>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +134,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Informational Website Development</h6>
-                                    <p>Craft informative and engaging websites that effectively communicate your brand's message and offerings to your target audience.</p>
+                                    <p>Craft informative and engaging websites that effectively communicate your brand's
+                                        message and offerings to your target audience.</p>
                                 </div>
                             </div>
                         </div>
@@ -117,7 +144,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Landing Page Development</h6>
-                                    <p>Create compelling landing pages that captivate visitors and drive conversions with focused messaging and clear calls-to-action.</p>
+                                    <p>Create compelling landing pages that captivate visitors and drive conversions
+                                        with focused messaging and clear calls-to-action.</p>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +154,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Conversion Rate Optimization</h6>
-                                    <p>Optimize your website's performance and maximize ROI by refining user experience and increasing the likelihood of converting visitors into customers.</p>
+                                    <p>Optimize your website's performance and maximize ROI by refining user experience
+                                        and increasing the likelihood of converting visitors into customers.</p>
                                 </div>
                             </div>
                         </div>
@@ -135,7 +164,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>UI Creation (Adobe Figma)</h6>
-                                    <p>Design intuitive user interfaces that enhance usability and engagement, ensuring seamless interactions and positive brand experiences.</p>
+                                    <p>Design intuitive user interfaces that enhance usability and engagement, ensuring
+                                        seamless interactions and positive brand experiences.</p>
                                 </div>
                             </div>
                         </div>
@@ -145,16 +175,16 @@
         </section>
         <!-- What we do for you Section End -->
 
-         <!-- Case Study Project Slider Section Start -->
-         <section class="case-study-project">
+        <!-- Case Study Project Slider Section Start -->
+        <section class="case-study-project">
             <div class="container-xxl">
                 <div class="row align-items-end">
                     <div class="col-md-6">
-                        <h3><b> Website & AR</b></h3>
-                    </div>  
+                        <h3><b>View Projects</b></h3>
+                    </div>
                     <div class="col-md-6 d-flex justify-content-end">
                         <div class="">
-                            <a href="" class="th-arrow-btn">
+                            <a href="project.html" class="th-arrow-btn">
                                 <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                 <span class="btn-text">View More</span>
                             </a>
@@ -162,12 +192,41 @@
                     </div>
                     <div class="col-md-12 p-0 mt-5">
                         <div class="casp-slider">
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
+                            <div class="casp-slider-item px-3">
+                                <a href="mia-by-tanishq-case-study.html" class="">
+                                    <img src="image/casp-1.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="celebrations-by-anjili-case-study.html" class="">
+                                    <img src="image/casp-2.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="navkeya-case-study.html" class="">
+                                    <img src="image/casp-3.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="dimple-collection-case-study.html" class="">
+                                    <img src="image/casp-4.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="gaupalam-vedic-case-study.html" class="">
+                                    <img src="image/casp-5.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="art-n-life-case-study.html" class="">
+                                    <img src="image/casp-6.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="swm-case-study.html" class="">
+                                    <img src="image/casp-7.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
