--- a/film-n-photography.html
+++ b/film-n-photography.html
@@ -47,31 +47,57 @@
                 <div class="row align-items-end justify-content-between">
                     <div class="col-md-6">
                         <h2>Film & Photography</h2>
-                        <p>Content is more than just words on a page or pixels on a screen. It's your brand's story, told in a way that resonates with your audience. With our content solutions, we don't just create content; we craft narratives that captivate, inspire, and drive action. Whether it's striking visuals, compelling videos, or engaging copy, we use data-driven insights and creative expertise to bring your brand's story to life. Because in a world saturated with content, it's not just about quantity – it's about quality, authenticity, and connection.</p>
+                        <p>Content is more than just words on a page or pixels on a screen. It's your brand's story,
+                            told in a way that resonates with your audience. With our content solutions, we don't just
+                            create content; we craft narratives that captivate, inspire, and drive action. Whether it's
+                            striking visuals, compelling videos, or engaging copy, we use data-driven insights and
+                            creative expertise to bring your brand's story to life. Because in a world saturated with
+                            content, it's not just about quantity – it's about quality, authenticity, and connection.
+                        </p>
                     </div>
                     <div class="col-md-5">
                         <div class="ssh-box">
                             <div class="ssh-slider">
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png" alt=""></div>
-                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png" alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/3.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/1.png"
+                                        alt=""></div>
+                                <div class="ssh-img-box"><img src="image/services-daughter/film-n-photography/2.png"
+                                        alt=""></div>
                             </div>
                         </div>
                     </div>
@@ -99,7 +125,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Product Photography</h6>
-                                    <p>Professional photos of your products to showcase them in the best light and attract customers.</p>
+                                    <p>Professional photos of your products to showcase them in the best light and
+                                        attract customers.</p>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +135,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Corporate Videos</h6>
-                                    <p>Videos that tell your company's story, values, and mission in a compelling and engaging way.</p>
+                                    <p>Videos that tell your company's story, values, and mission in a compelling and
+                                        engaging way.</p>
                                 </div>
                             </div>
                         </div>
@@ -117,7 +145,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>eCommerce Photography</h6>
-                                    <p>High-quality images of your products for online stores, enhancing their appeal to potential buyers.</p>
+                                    <p>High-quality images of your products for online stores, enhancing their appeal to
+                                        potential buyers.</p>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +155,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Explainer Videos</h6>
-                                    <p>Informative videos that explain your products or services in a clear and engaging manner, helping customers understand their benefits.</p>
+                                    <p>Informative videos that explain your products or services in a clear and engaging
+                                        manner, helping customers understand their benefits.</p>
                                 </div>
                             </div>
                         </div>
@@ -135,7 +165,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Reel Production</h6>
-                                    <p>Short and dynamic video clips that highlight key aspects of your brand or offerings, perfect for social media and digital marketing campaigns.</p>
+                                    <p>Short and dynamic video clips that highlight key aspects of your brand or
+                                        offerings, perfect for social media and digital marketing campaigns.</p>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +175,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Showreel Creation</h6>
-                                    <p>A collection of your best video content into a captivating showcase, demonstrating the breadth and quality of your brand's visual storytelling.</p>
+                                    <p>A collection of your best video content into a captivating showcase,
+                                        demonstrating the breadth and quality of your brand's visual storytelling.</p>
                                 </div>
                             </div>
                         </div>
@@ -153,7 +185,8 @@
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
                                     <h6>Amazon Video Ads</h6>
-                                    <p>Video advertisements tailored for Amazon's platform, driving visibility and sales for your products on the world's largest online marketplace.</p>
+                                    <p>Video advertisements tailored for Amazon's platform, driving visibility and sales
+                                        for your products on the world's largest online marketplace.</p>
                                 </div>
                             </div>
                         </div>
@@ -163,16 +196,16 @@
         </section>
         <!-- What we do for you Section End -->
 
-         <!-- Case Study Project Slider Section Start -->
-         <section class="case-study-project">
+        <!-- Case Study Project Slider Section Start -->
+        <section class="case-study-project">
             <div class="container-xxl">
                 <div class="row align-items-end">
                     <div class="col-md-6">
-                        <h3><b>Film & Photography</b></h3>
-                    </div>  
+                        <h3><b>View Projects</b></h3>
+                    </div>
                     <div class="col-md-6 d-flex justify-content-end">
                         <div class="">
-                            <a href="" class="th-arrow-btn">
+                            <a href="project.html" class="th-arrow-btn">
                                 <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                 <span class="btn-text">View More</span>
                             </a>
@@ -180,12 +213,41 @@
                     </div>
                     <div class="col-md-12 p-0 mt-5">
                         <div class="casp-slider">
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
+                            <div class="casp-slider-item px-3">
+                                <a href="mia-by-tanishq-case-study.html" class="">
+                                    <img src="image/casp-1.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="celebrations-by-anjili-case-study.html" class="">
+                                    <img src="image/casp-2.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="navkeya-case-study.html" class="">
+                                    <img src="image/casp-3.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="dimple-collection-case-study.html" class="">
+                                    <img src="image/casp-4.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="gaupalam-vedic-case-study.html" class="">
+                                    <img src="image/casp-5.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="art-n-life-case-study.html" class="">
+                                    <img src="image/casp-6.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
+                            <div class="casp-slider-item px-3">
+                                <a href="swm-case-study.html" class="">
+                                    <img src="image/casp-7.jpg" alt="" class="w-100">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
