--- a/mrw-case-study.html
+++ b/mrw-case-study.html
@@ -115,32 +115,64 @@
         </section>
         <!-- Case Study Website Building Section End -->
 
-        <!-- Case Study Project Slider Section Start -->
-        <section class="case-study-project">
-            <div class="container-xxl">
-                <div class="row align-items-end ">
-                    <div class="col-sm-6 mb-sm-3">
-                        <h3><b>View More Projects</b></h3>
+       <!-- Case Study Project Slider Section Start -->
+       <section class="case-study-project">
+        <div class="container-xxl">
+            <div class="row align-items-end">
+                <div class="col-md-6">
+                    <h3><b>View Projects</b></h3>
+                </div>  
+                <div class="col-md-6 d-flex justify-content-end">
+                    <div class="">
+                        <a href="project.html" class="th-arrow-btn">
+                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                            <span class="btn-text">View More</span>
+                        </a>
                     </div>
-                    <div class="col-sm-6 mb-sm-3 d-flex justify-content-sm-end">
-                        <div class="">
-                            <a href="#" class="text-decoration-underline"><p>Go Back to Project</p></a>
+                </div>
+                <div class="col-md-12 p-0 mt-5">
+                    <div class="casp-slider">
+                        <div class="casp-slider-item px-3">
+                            <a href="mia-by-tanishq-case-study.html" class="">
+                                <img src="image/casp-1.jpg" alt="" class="w-100">
+                            </a>
                         </div>
-                    </div>
-                    <div class="col-md-12 p-0">
-                        <div class="casp-slider">
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
+                        <div class="casp-slider-item px-3">
+                            <a href="celebrations-by-anjili-case-study.html" class="">
+                                <img src="image/casp-2.jpg" alt="" class="w-100">
+                            </a>
+                        </div>
+                        <div class="casp-slider-item px-3">
+                            <a href="navkeya-case-study.html" class="">
+                                <img src="image/casp-3.jpg" alt="" class="w-100">
+                            </a>
+                        </div>
+                        <div class="casp-slider-item px-3">
+                            <a href="dimple-collection-case-study.html" class="">
+                                <img src="image/casp-4.jpg" alt="" class="w-100">
+                            </a>
+                        </div>
+                        <div class="casp-slider-item px-3">
+                            <a href="gaupalam-vedic-case-study.html" class="">
+                                <img src="image/casp-5.jpg" alt="" class="w-100">
+                            </a>
+                        </div>
+                        <div class="casp-slider-item px-3">
+                            <a href="art-n-life-case-study.html" class="">
+                                <img src="image/casp-6.jpg" alt="" class="w-100">
+                            </a>
+                        </div>
+                        <div class="casp-slider-item px-3">
+                            <a href="swm-case-study.html" class="">
+                                <img src="image/casp-7.jpg" alt="" class="w-100">
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Case Study Project Slider Section End -->
+        </div>
+    </section>
+    <!-- Case Study Project Slider Section End -->
 
 
 
