--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
                             Let's create
                             something great together
                         </h3>
-                        <p>Based in <a href="#">Delhi</a> & <a href="#">Agra</a></p>
+                        <p>Based in <a href="https://maps.app.goo.gl/UZ3y3o2ETJM94J166" target="_blank">Delhi</a> & <a href="https://maps.app.goo.gl/EhiojTxJ1F1xrzHF8" target="_blank">Agra</a></p>
                     </div>
                 </div>
                 <div class="col-sm-5 d-flex justify-content-end p-0">
@@ -35,10 +35,10 @@
                 <div class="col-md-6 col-sm-7">
                     <div class="foot-social mt-3 mt-sm-0">
                         <ul class="m-0 p-0 d-flex justify-content-center justify-content-md-between align-items-center flex-wrap">
-                            <li class="p-1"><a href="#">INSTAGRAM</a></li>
-                            <li class="p-1"><a href="#">LINKEDIN</a></li>
-                            <li class="p-1"><a href="#">BEHANCE</a></li>
-                            <li class="p-1"><a href="#">FACEBOOK</a></li>
+                            <li class="p-1"><a href="https://www.instagram.com/mediaxindia/" target="_blank">INSTAGRAM</a></li>
+                            <li class="p-1"><a href="https://www.linkedin.com/company/mediaxindia/" target="_blank">LINKEDIN</a></li>
+                            <li class="p-1"><a href="https://www.behance.net/mediaxindia" target="_blank">BEHANCE</a></li>
+                            <li class="p-1"><a href="https://www.facebook.com/mediaxindia/" target="_parent">FACEBOOK</a></li>
                         </ul>
                     </div>
                 </div>
