--- a/index.html
+++ b/index.html
@@ -350,18 +350,20 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="ouw-box">
-                            <a href="" class="">
+                            <a href="art-n-life-case-study.html" class="">
                                 <div class="ouw-h">
-                                    <h4>Alan Truman</h4>
+                                    <h4>
+                                        Arts & Life
+                                    </h4>
                                 </div>
-                                <div class="ouw-img"><img src="image/project/Alan truman/Image.png" alt=""></div>
+                                <div class="ouw-img"><img src="image/project/Art & Life/Image.jpeg" alt=""></div>
                                 <div class="ouw-text">
                                    
                                     <div class="">
-                                        <p>How did we help Alan Truman with problem-solving videos for their top categories?</p>
+                                        <p>Arts & Life revives tradition through marble inlay, crafting each piece with meticulous detail and creative flair. </p>
                                     </div>
                                     <div class="ouw-logo">
-                                        <img src="image/project/Alan truman/Logo.png" class="" alt="">
+                                        <img src="image/project/Art & Life/Logo.png" class="" alt="">
                                     </div>
                                     <!-- <div class="">
                                         <a href="#" class="th-arrow-btn">
