--- a/careers.html
+++ b/careers.html
@@ -111,7 +111,7 @@
             <div class="container-xxl position-relative">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h2 class="text-end">What our <div class="d-none d-sm-block"></div>
+                        <h2 class="text-md-end ">What our <div class="d-none d-sm-block"></div>
                             xperts Think</h2>
                     </div>
                 </div>
