--- a/about-us.html
+++ b/about-us.html
@@ -162,9 +162,10 @@
                         </div>
                         <div class="col-md-8">
                             <p>
-                                MediaX is a lively bunch of advertising pros, always up-to-date with the latest trends.
+                                At MediaX, we are a dynamic team of advertising professionals passionate about staying ahead of the curve. Our expertise in crafting innovative strategies ensures impactful results for our clients. Collaborating with companies globally, we tailor bespoke plans designed to drive business growth and success.
+                                <!-- MediaX is a lively bunch of advertising pros, always up-to-date with the latest trends.
                                 We're skilled at creating effective strategies that get results. Working with companies
-                                worldwide, we develop unique plans to help businesses grow.
+                                worldwide, we develop unique plans to help businesses grow. -->
                             </p>
                         </div>
                     </div>
@@ -202,6 +203,15 @@
                                     <div class="te-img"><img src="image/team/ayushi.jpg" alt="" class="w-100"></div>
                                     <div class="te-text">
                                         <div class="te-title">Ayushi Guwalani</div>
+                                        <div class="te-pera">Account Manager</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-2 col-md-3 col-sm-4 col-6 my-2 my-sm-4">
+                                <div class="te-box">
+                                    <div class="te-img"><img src="image/team/ayushi-d.JPG" alt="" class="w-100"></div>
+                                    <div class="te-text">
+                                        <div class="te-title">Ayushi Gupta</div>
                                         <div class="te-pera">Account Manager</div>
                                     </div>
                                 </div>
@@ -498,7 +508,7 @@
                                     creating pivotal pathways for your brand to be seen and heard by the crowd. </p>
                             </div>
                             <div class="">
-                                <a href="#" class="th-arrow-btn">
+                                <a href="connect.html" class="th-arrow-btn">
                                     <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                     <span class="btn-text">Start a Partnership</span>
                                 </a>
@@ -512,32 +522,28 @@
                                     <div class="oub-box oub-box-1">
                                         <img src="image/bel-face.png" alt="">
                                         <h5>Keep It human</h5>
-                                        <p>From design to partnerships, our commitment is to positively impact all the
-                                            real lives we touch.</p>
+                                        <p>From design to partnerships, our commitment is to positively impact all the real lives we touch.</p>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-2">
                                         <img src="image/bel-plane.png" alt="">
                                         <h5>Push our boundaries</h5>
-                                        <p>We create safe spaces to challenge norms, asking "what if" to drive progress
-                                            and build for people.</p>
+                                        <p>We create safe spaces to challenge norms, asking "what if" to drive progress and build for people.</p>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-3">
                                         <img src="image/bel-chat.png" alt="">
                                         <h5>Uncover the stories</h5>
-                                        <p>We're passionate about uncovering the amazing tales, forging connections that
-                                            resonate deeply with audiences.</p>
+                                        <p>We're passionate about discovering amazing tales, forging connections that resonate deeply with audiences.</p>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-4">
                                         <img src="image/bel-target.png" alt="">
                                         <h5> Drive Results</h5>
-                                        <p>We're all about making things happen, ensuring every move we make brings
-                                            real, measurable success for our clients.</p>
+                                        <p>We're all about making things happen, ensuring every move we make brings real, measurable success for our clients.</p>
                                     </div>
                                 </div>
                             </div>
