--- a/footer.html
+++ b/footer.html
@@ -38,7 +38,7 @@
                             <li class="p-1"><a href="https://www.instagram.com/mediaxindia/" target="_blank">INSTAGRAM</a></li>
                             <li class="p-1"><a href="https://www.linkedin.com/company/mediaxindia/" target="_blank">LINKEDIN</a></li>
                             <li class="p-1"><a href="https://www.behance.net/mediaxindia" target="_blank">BEHANCE</a></li>
-                            <li class="p-1"><a href="https://www.facebook.com/mediaxindia/" target="_parent">FACEBOOK</a></li>
+                            <li class="p-1"><a href="https://www.facebook.com/mediaxindia/" target="_blank">FACEBOOK</a></li>
                         </ul>
                     </div>
                 </div>
