--- a/project.html
+++ b/project.html
@@ -341,7 +341,7 @@
                             <div class="col-lg-5 pro-left pro-type-2">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
-                                        <div class="tag">Creative & Branding</div>
+                                        <div class="tag">Media Solutions</div>
                                         <div class="tag">Website & AR</div>
                                     </div>
                                     <div class="pro-title">
@@ -664,10 +664,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-box" data-project-name="MRW">
+                    <div class="project-box" data-project-name="ESMEE">
                         <div class="row">
                             <div class="col-lg-7 pro-right order-lg-1">
-                                <div class="pro-b-img"><img src="image/project-page/project-8.png" alt="" class="w-100">
+                                <div class="pro-b-img"><img src="image/project-page/project-9.jpg" alt="" class="w-100">
                                 </div>
                             </div>
                             <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
@@ -677,13 +677,13 @@
                                         <div class="tag">Media Solutions</div>
                                     </div> -->
                                     <div class="pro-title">
-                                        M.R. Warerkar
+                                        ESMEE
                                     </div>
                                     <div class="pro-des">
-                                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                        <p> A D2C men’s footwear brand</p>
                                     </div>
                                     <div class="pro-btn">
-                                        <a href="mrw-case-study.html" class="th-arrow-btn">
+                                        <a href="esmee-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Learn More</span>
                                         </a>
@@ -782,10 +782,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-box" data-project-name="ESMEE">
+                    <div class="project-box" data-project-name="Arts & Life">
                         <div class="row">
                             <div class="col-lg-7 pro-right">
-                                <div class="pro-b-img"><img src="image/project-page/project-9.jpg" alt="" class="w-100"></div>
+                                <div class="pro-b-img"><img src="image/project-page/project-10.jpeg" alt="" class="w-100"></div>
                             </div>
                             <div class="col-lg-5 pro-left pro-type-2">
                                 <div class="pro-b-text">
@@ -794,37 +794,10 @@
                                         <div class="tag">Website & AR</div>
                                     </div> -->
                                     <div class="pro-title">
-                                        ESMEE
-                                    </div>
-                                    <div class="pro-des">
-                                        <p> A D2C men’s footwear brand</p>
-                                    </div>
-                                    <div class="pro-btn">
-                                        <a href="esmee-case-study.html" class="th-arrow-btn">
-                                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
-                                            <span class="btn-text">Learn More</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-box" data-project-name="Arts & Life">
-                        <div class="row">
-                            <div class="col-lg-7 pro-right order-lg-1">
-                                <div class="pro-b-img"><img src="image/project-page/project-10.jpeg" alt="" class="w-100">
-                                </div>
-                            </div>
-                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
-                                <div class="pro-b-text">
-                                    <!-- <div class="tag-box">
-                                        <div class="tag">Creative & Branding</div>
-                                    </div> -->
-                                    <div class="pro-title">
                                         Arts & Life
                                     </div>
                                     <div class="pro-des">
-                                        <p>Reviving Tradition Through Marble Inlays</p>
+                                        <p> Reviving Tradition Through Marble Inlays</p>
                                     </div>
                                     <div class="pro-btn">
                                         <a href="art-n-life-case-study.html" class="th-arrow-btn">
@@ -834,7 +807,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
