--- a/solutions.html
+++ b/solutions.html
@@ -47,8 +47,8 @@
                 <div class="main-h mb-4">
                    <div class="row">
                     <div class="col-md-8 col-lg-6">
-                        <h2>OUR Services</h2>
-                        <p>We proudly showcase a curated collection of our most remarkable and successful endeavours. Each project represents our commitment to excellence.</p>
+                        <h2>OUR Solutions</h2>
+                        <p>We blend creativity, data, media, and technology to transform how brands inspire the world. Together, we achieve remarkable results and drive impactful growth.</p>
                     </div>
                    </div>
                 </div>
