--- a/header.html
+++ b/header.html
@@ -12,23 +12,22 @@
                         <li class="nm-item" data-page="home-page"><a class="nm-link" href="index.html">Home</a></li>
                         <li class="nm-item" data-page="about-page"><a class="nm-link" href="about-us.html">About Us</a>
                         </li>
-                        <li class="nm-item" data-page="service-page"><a class="nm-link" href="service.html">Services</a>
+                        <li class="nm-item" data-page="service-page"><a class="nm-link" href="solutions.html">Solutions</a>
                         </li>
                         <li class="nm-item" data-page="project-page"><a class="nm-link" href="project.html">Projects</a>
                         </li>
                         <li class="nm-item" data-page="career-page"><a class="nm-link" href="careers.html">Careers</a>
                         </li>
                         <li class="nm-item">
-                            <a href="contact-us.html" data-page="contact-page"
-                                class="th-btn d-inline-block d-lg-none">contact us</a>
+                            <a href="connect.html" data-page="contact-page"
+                                class="th-btn d-inline-block d-lg-none">Connect</a>
                         </li>
                         <!-- <div class="nm-circle"></div> -->
                     </ul>
                 </div>
             </div>
             <div class="col-3 my-3 d-flex justify-content-end">
-                <a href="contact-us.html" data-page="contact-page" class="th-btn d-none d-lg-inline-block">contact
-                    us</a>
+                <a href="connect.html" data-page="contact-page" class="th-btn d-none d-lg-inline-block">Connect</a>
                 <div class="hamburger d-block d-lg-none" id="hamburger-6">
                     <span class="line"></span>
                     <span class="line"></span>
@@ -48,7 +47,9 @@
                 </div>
             </div>
             <div class="col-3 my-3 d-flex justify-content-end">
-                <i class="fas fa-times"></i>
+                <div class="hamburger close" id="hamburger-6">
+                  <img src="image/cancel.png" class="w-100" alt="">
+                </div>
             </div>
         </div>
         <div class="nav-menu-container">
@@ -57,22 +58,22 @@
                     <li class="nm-item" data-page="home-page"><a class="nm-link" href="index.html">Home</a></li>
                     <li class="nm-item" data-page="about-page"><a class="nm-link" href="about-us.html">About Us</a>
                     </li>
-                    <li class="nm-item" data-page="service-page"><a class="nm-link" href="service.html">Services</a>
+                    <li class="nm-item" data-page="service-page"><a class="nm-link" href="solutions.html">Solutions</a>
                     </li>
                     <li class="nm-item" data-page="project-page"><a class="nm-link" href="project.html">Projects</a>
                     </li>
-                    <li class="nm-item" data-page="career-page"><a class="nm-link" href="careers.html">Careers</a>
-                    </li>
+                    <li class="nm-item" data-page="career-page"><a class="nm-link" href="careers.html">Careers</a></li>
+                    <li class="nm-item" data-page="career-page"><a class="nm-link" href="connect.html">Connect</a></li>
                 </ul>
             </div>
         </div>
         <div class="social-med py-4">
             <h4>Social Media</h4>
             <div class="tag-box mt-3">
-                <a href="#" class="tag">LinkedIn</a>
-                <a href="#" class="tag">Instagram</a>
-                <a href="#" class="tag">Behance</a>
-                <a href="#" class="tag">Facebook</a>
+                <a href="https://www.linkedin.com/company/mediaxindia/" target="_blank" class="tag">LinkedIn</a>
+                <a href="https://www.instagram.com/mediaxindia/" target="_blank" class="tag">Instagram</a>
+                <a href="https://www.behance.net/mediaxindia" target="_blank" class="tag">Behance</a>
+                <a href="https://www.facebook.com/mediaxindia" target="_blank" class="tag">Facebook</a>
             </div>
         </div>
     </div>
@@ -87,7 +88,7 @@
             $("#header").removeClass("active");
         }
     })
-    $(".hamburger,.header-close .fa-times").click(function () {
+    $(".hamburger,.header-close .close").click(function () {
         $('.header-close').toggleClass("active");
     });
     var pageValue = $('body').attr('id');
@@ -98,4 +99,5 @@
         pageValue = 'project-page'
     }
     $('[data-page="' + pageValue + '"]').addClass('active');
+    // $(`[data-page="${pageValue}"]`).addClass('active');
 </script>
